<resources>
    <string name="app_name">Yuka-鱼卡悬浮窗翻译器</string>
    <string name="True">1</string>
    <string name="False">0</string>
    <string name="id">账号</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="avatar">用户头像</string>
    <string-array name="mode">
        <item>ocr</item>
        <item>translate</item>
        <item>yuka</item>
        <item>auto</item>
    </string-array>
    <string-array name="detect_modelset">
        <item>baidu</item>
        <item>youdao</item>
        <item>google</item>
    </string-array>
    <string-array name="detect_model">
        <item>百度（百度智能云）</item>
        <item>有道（有道智云）</item>
        <item>谷歌（Google Cloud Vision）（目前被墙）</item>
    </string-array>
    <string-array name="auto_modelset">
        <item>baidu</item>
        <item>youdao</item>
        <item>google</item>
    </string-array>
    <string-array name="auto_model">
        <item>百度（百度智能云）</item>
        <item>有道（有道智云）</item>
        <item>谷歌（Google Cloud Vision）（目前被墙）</item>
    </string-array>
    <string-array name="translator_name">
        <item>百度翻译</item>
        <item>有道翻译</item>
        <item>腾讯翻译</item>
        <item>Google翻译（目前被墙）</item>
    </string-array>
    <string-array name="translator">
        <item>baidu</item>
        <item>youdao</item>
        <item>tencent</item>
        <item>google</item>
    </string-array>
    <string-array name="sync_provider">
        <item>有道</item>
    </string-array>
    <string-array name="sync_providerset">
        <item>youdao</item>
    </string-array>
    <string-array name="other_sync_providerset">
        <item>youdao</item>
    </string-array>
    <string-array name="sync_o_language">
        <item>简体中文</item>
        <item>通用英文</item>
        <item>日语</item>
        <item>韩语</item>
        <item>法语</item>
        <item>俄语</item>
        <item>德语</item>
    </string-array>
    <string-array name="sync_o_languageset">
        <item>zh-CHS</item>
        <item>en</item>
        <item>ja</item>
        <item>ko</item>
        <item>fr</item>
        <item>ru</item>
        <item>de</item>
    </string-array>
    <string-array name="sync_t_language">
        <item>简体中文</item>
        <item>通用英文</item>
        <item>中英混合</item>
        <item>日语</item>
        <item>韩语</item>
        <item>法语</item>
        <item>俄语</item>
        <item>德语</item>
    </string-array>
    <string-array name="sync_t_languageset">
        <item>zh-CHS</item>
        <item>en</item>
        <item>enzh</item>
        <item>ja</item>
        <item>ko</item>
        <item>fr</item>
        <item>ru</item>
        <item>de</item>
    </string-array>
    <string-array name="sync_mode">
        <item>整句模式</item>
        <item>实时模式</item>
    </string-array>
    <string-array name="sync_modeset">
        <item>sentence</item>
        <item>stream</item>
    </string-array>
    <string-array name="tess_detect_model">
        <item>注重质量</item>
        <item>注重速度</item>
    </string-array>
    <string-array name="tess_detect_modelset">
        <item>best</item>
        <item>fast</item>
    </string-array>
    <string-array name="tess_lang">
        <item>简中</item>
        <item>简中（竖排）</item>
        <item>繁中</item>
        <item>繁中（竖排）</item>
        <item>英语</item>
        <item>日语</item>
        <item>日语（竖排）</item>
        <item>韩语</item>
        <item>韩语（竖排）</item>
        <item>法语</item>
        <item>俄语</item>
        <item>德语</item>
    </string-array>
    <string-array name="tess_langset">
        <item>chi_sim</item>
        <item>chi_sim_vert</item>
        <item>chi_tra</item>
        <item>chi_tra_vert</item>
        <item>eng</item>
        <item>jpn</item>
        <item>jpn_vert</item>
        <item>kor</item>
        <item>kor_vert</item>
        <item>fra</item>
        <item>rus</item>
        <item>deu</item>
    </string-array>
    <string-array name="tess_lang_sub">
        <item>简中</item>
        <item>简中（竖排）</item>
        <item>繁中</item>
        <item>繁中（竖排）</item>
        <item>英语</item>
        <item>日语</item>
        <item>日语（竖排）</item>
        <item>韩语</item>
        <item>韩语（竖排）</item>
        <item>法语</item>
        <item>俄语</item>
        <item>德语</item>
    </string-array>
    <string-array name="tess_langset_sub">
        <item>chi_sim</item>
        <item>chi_sim_vert</item>
        <item>chi_tra</item>
        <item>chi_tra_vert</item>
        <item>eng</item>
        <item>jpn</item>
        <item>jpn_vert</item>
        <item>kor</item>
        <item>kor_vert</item>
        <item>fra</item>
        <item>rus</item>
        <item>deu</item>
    </string-array>
    <string-array name="ml_kit_lang">
        <item>拉丁语（即英语等）</item>
        <item>中文</item>
        <item>日语</item>
        <item>韩语</item>
        <item>梵文</item>
    </string-array>
    <string-array name="ml_kit_langset">
        <item>latin</item>
        <item>Chinese</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Devanagari</item>
    </string-array>
    <string-array name="other_detect_modelset">
        <item>youdao</item>
        <item>baidu</item>
    </string-array>
    <string-array name="other_detect_model">
        <item>有道（有道智云）</item>
        <item>百度（百度智能云）</item>
    </string-array>
    <string-array name="other_auto_modelset">
        <item>youdao</item>
        <item>baidu</item>
    </string-array>
    <string-array name="other_auto_model">
        <item>有道（有道智云）</item>
        <item>百度（百度智能云）暂时无效！</item>
    </string-array>
    <string-array name="other_trans_modelset">
        <item>youdao</item>
        <item>baidu</item>
    </string-array>
    <string-array name="other_trans_model">
        <item>有道（有道智云）</item>
        <item>百度（百度智能云）</item>
    </string-array>
    <string-array name="sender_api_detect">
        <item>yuka_v1</item>
        <item>自定义在线识别</item>
        <item>离线Google ML kit Vision</item>
        <item>离线tesseract-LSTM</item>
        <item>分享截图至其他软件（如有道翻译官等）</item>
    </string-array>
    <string-array name="sender_api_value_detect">
        <item>yuka_v1</item>
        <item>other</item>
        <item>ml_kit</item>
        <item>tess</item>
        <item>share</item>
    </string-array>
    <string-array name="sender_api_trans">
        <item>yuka_v1</item>
        <item>自定义在线翻译</item>
        <item>不翻译，仅识别</item>
    </string-array>
    <string-array name="sender_api_value_trans">
        <item>yuka_v1</item>
        <item>other</item>
        <item>null</item>
    </string-array>
    <string-array name="sender_api_auto">
        <item>yuka_v1</item>
        <item>自定义在线识别</item>
    </string-array>
    <string-array name="sender_api_value_auto">
        <item>yuka_v1</item>
        <item>other</item>
    </string-array>
    <string-array name="sender_api_trans_auto">
        <item>yuka_v1</item>
        <item>自定义在线翻译</item>
        <item>不翻译，仅识别</item>
    </string-array>
    <string-array name="sender_api_value_trans_auto">
        <item>yuka_v1</item>
        <item>other</item>
        <item>null</item>
    </string-array>
    <string-array name="sender_api_sync">
        <item>yuka_v1</item>
        <item>自定义</item>
    </string-array>
    <string-array name="sender_api_value_sync">
        <item>yuka_v1</item>
        <item>other</item>
    </string-array>
    <string name="register">注册</string>
    <string name="mb_mid_4250_name">伊莉雅</string>
    <string name="sync_HowToModifyTargetSdk">一般来说，TargetSdk为29（即安卓Q）的App默认支持本功能。低于29的App默认不支持本功能。如要强制支持，请用MT管理器修改该App中的AndroidManifest.xml中的android:targetSdkVersion值为29即可</string>
    <string name="about_dev_yuka">YuKa</string>
    <string name="about_dev_version_1_0">Version 1.0</string>
    <string name="about_dev_copyright">Copyright © YuKa . All Rights Reserved</string>
    <string name="floatwindow_main_info">选取目标位置后点识别</string>
    <string name="help_example_title">示例</string>
    <string name="help_example_first">在下图中，可爱的炸鸡准备去打工。我们希望通过Yuka来得知炸鸡说的是什么。</string>
    <string name="help_example_seconde">通过各种方法将Yuka选词窗的框完全套住对话框，最后按下对勾来完成操作。</string>
    <string name="help_example_third">如果你的手机出现了类似下图的权限申请，上帝保佑，Yuka正常运行了！ 点击确认，大约还有半秒你就有机会明白炸鸡的意思了！</string>
    <string name="help_example_fourth">经过翻译，看来炸鸡想去甜品店！还不陪她去？</string>
    <string name="home_main_input">输入您想要翻译的句子</string>
    <string name="home_main_translated">译文：\n</string>
    <string name="home_main_nothing">这里空空如也 . . .</string>
    <string name="log_forgetpwd_username">用 户 名 ：</string>
    <string name="log_forgetpwd_input_1">请输入用户名</string>
    <string name="log_forgetpwd_pwd">输入密码 ：</string>
    <string name="log_forgetpwd_input_2">6–16位,由字母(区分大小写),数字,符号组成</string>
    <string name="log_forgetpwd_confirm">确认密码 ：</string>
    <string name="log_forgetpwd_input_3">请再次输入密码</string>
    <string name="log_forgetpwd_commit">确认修改</string>
    <string name="log_login_forgetpwd">忘记密码</string>
    <string name="log_login_notification_1">已阅读并同意</string>
    <string name="log_login_notification_2">隐私协议</string>
    <string name="log_login_notification_3">及</string>
    <string name="log_login_notification_4">用户协议</string>
    <string name="log_register_username_1">用户名*</string>
    <string name="log_register_username_2">请输入用户名</string>
    <string name="log_register_pwd_1">密  码*</string>
    <string name="log_register_pwd_2">6–16位,由字母(区分大小写),数字,符号组成</string>
    <string name="log_register_commit">注册</string>
    <string name="nav_header_yuka">Yuka</string>
    <string name="nav_header_username">绯绯色欠片</string>
    <string name="nav_header_login">登录</string>
    <string name="nav_header_logout">登出</string>
    <string name="personal_service_id">注册ID:</string>
    <string name="personal_service_date">过期时间：</string>
    <string name="personal_service_last_1">剩余普通翻译次数：</string>
    <string name="personal_service_last_2">剩余自动识别翻译次数：</string>
    <string name="personal_service_last_3">剩余同传时间：</string>
    <string name="personal_service_last_4">超级月卡</string>
    <string name="personal_service_last_5">多捞哦</string>
    <string name="personal_service_cdkey_1">请输入激活码</string>
    <string name="personal_service_cdkey_2">获取激活码</string>
    <string name="personal_service_cdkey_3">立即激活</string>
    <string name="personal_view_username">用户名</string>
    <string name="personal_view_username_2">Thomsen</string>
    <string name="policy_title">Yuka隐私协议</string>
    <string name="policy_cancel">取消</string>
    <string name="policy_agree">我同意本协议</string>
    <string name="guide_touchexploration_next">下一步</string>
    <string name="guide_te_string1">现在对Yuka的使用进行说明。说明文字永远固定在屏幕的正中间，下一步按钮永远固定在屏幕最下边位置。现在，请尝试寻找并记忆这两个位置。点击下一步继续</string>
    <string name="guide_te_string2">通过点击左上角菜单按钮，可以打开侧边菜单栏。完成登录、设置等操作。点击下一步继续，不用担心，我们会帮你打开它的</string>
    <string name="guide_te_string3">菜单栏已展开，请点击下一步结束引导，稍后，你可以自行通过屏幕上方中间位置的登录按钮进行账户登录</string>
    <string name="main_guide_1">YuKa翻译器使用指导</string>
    <string name="main_guide_2">一、基本使用</string>
    <string name="main_guide_3">启动App完成登陆之后，点击底部导航栏启动按钮打开悬浮球，点击悬浮球打开悬浮菜单</string>
    <string name="main_guide_4">悬浮菜单从上往下依次是设置、识别、重置、退出，点击重置按钮打开悬浮窗</string>
    <string name="main_guide_5">长按重置按钮可以进入二级菜单，二级菜单从上往下依次是单/多悬浮窗识别翻译、持续识别翻译、自动识别翻译、视频同步字幕翻译，选择好翻译模式之后关闭二级菜单，再次点击重置按钮即为选择的模式</string>
    <string name="main_guide_6">拖动悬浮窗到相应位置，调整大小框选需要翻译的内容，点击悬浮窗上的翻译按钮或者悬浮菜单的识别按钮，即可完成翻译</string>
    <string name="main_guide_7">二、进阶使用</string>
    <string name="main_guide_8">在持续识别翻译模式下，可以手动设置持续时间，用来玩游戏在适合不过了</string>
    <string name="main_guide_9">在自动识别翻译模式下，可以精准识别文字区域进行翻译，是用来看漫画刷评论的不二之选</string>
    <string name="main_guide_10">三、翻译示例</string>
    <string name="main_guide_yuka_narcissu">点击下面图片观看YuKa翻译作品Narcissu</string>
    <string name="menu_main_drawer_mainpage">主页</string>
    <string name="menu_main_drawer_options">设置</string>
    <string name="menu_main_drawer_guide">引导</string>
    <string name="menu_main_drawer_help">帮助</string>
    <string name="menu_main_drawer_about">关于</string>
</resources>