<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:contentDescription="主页"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_main_drawer_mainpage" />
        <item
            android:id="@+id/nav_settings"
            android:contentDescription="设置"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_main_drawer_options" />
        <item
            android:id="@+id/nav_guide"
            android:contentDescription="引导"
            android:icon="@drawable/ic_guide"
            android:title="@string/menu_main_drawer_guide" />
        <item
            android:id="@+id/nav_help"
            android:contentDescription="帮助"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_main_drawer_help" />
        <item
            android:id="@+id/nav_about"
            android:contentDescription="关于"
            android:icon="@drawable/ic_developer_board"
            android:title="@string/menu_main_drawer_about" />
    </group>
</menu>