<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_1"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_3"
            android:textColor="#000000"
            app:lineHeight="20dp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="240dp"
            android:layout_height="138dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/guidepage_menu" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_4"
            android:textColor="#000000"
            app:lineHeight="20dp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="240dp"
            android:layout_height="145dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/guidepage_openwindow" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_5"
            android:textColor="#000000"
            app:lineHeight="20dp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="240dp"
            android:layout_height="164dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/guidepage_choosepattern" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_6"
            android:textColor="#000000"
            app:lineHeight="20dp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="240dp"
            android:layout_height="220dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/guidepage_chooseposition" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_7"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_8"
            android:textColor="#000000"
            app:lineHeight="20dp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="361dp"
            android:layout_height="187dp"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:src="@drawable/guidepage_continue" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_9"
            android:textColor="#000000"
            app:lineHeight="20dp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="360dp"
            android:layout_height="546dp"
            android:src="@drawable/guidepage_autotranslate" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_10"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/main_guide_yuka_narcissu"
            android:textColor="#000000"
            app:lineHeight="20dp" />

        <ImageView
            android:id="@+id/Narcissu1"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/guidepage_narcissu1" />


        <ImageView
            android:id="@+id/Narcissu2"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/guidepage_narcissu2" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</ScrollView>
