<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/help_example_title"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_example_first" />

            <ImageView
                android:layout_width="370dp"
                android:layout_height="200dp"
                android:src="@drawable/help_ins_before" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_example_seconde" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_example_third" />

            <ImageView
                android:layout_width="370dp"
                android:layout_height="200dp"
                android:src="@drawable/help_ins_mid" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_example_fourth" />

            <ImageView
                android:layout_width="370dp"
                android:layout_height="200dp"
                android:src="@drawable/help_ins_after" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>